objects/ssot__EmploymentBenefitSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BenefitUsage__c</fullName>
        <label>Benefit Usage</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisclsReportingPeriodId__c</fullName>
        <label>Disclosure Reporting Period</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeBenefitType__c</fullName>
        <label>Benefit Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeCount__c</fullName>
        <label>Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeePercentage__c</fullName>
        <label>Employee Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ssot__EmploymentType__c</fullName>
        <label>Employment Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Employment Benefit Summary Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsEmployeeEligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PercentageCalcType__c</fullName>
        <label>Percentage Calculation Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryLocationName__c</fullName>
        <label>Primary Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubsidiaryAccountId__c</fullName>
        <label>Subsidiary Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383536349_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmploymentBenefitSummary_SubsidiaryA_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>EmploymentBenefitSummary_SubsidiaryA_rel</relationshipLabel>
        <relationshipName>rel_1747383536349_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383538202_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmploymentBenefitSummary_DisclsRepor_rel</label>
        <referenceTo>ssot__DisclosureReportingPeriod__dlm</referenceTo>
        <relationshipLabel>EmploymentBenefitSummary_DisclsRepor_rel</relationshipLabel>
        <relationshipName>rel_1747383538202_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>